--- a/src.css
+++ b/src.css
@@ -9,7 +9,7 @@
 ============================================================================ */
 
 
-/*   CLEAR fix
+/* CLEAR FIX
 As you can see, .Wrapper and .Chunk handle the 'clear' issues
 automatically. Other elements can be fixed by adding the .clearfix rule. */
 .Wrapper, .Chunk, .clearfix { _zoom: 1; }
@@ -21,19 +21,22 @@ automatically. Other elements can be fixed by adding the .clearfix rule. */
 	visibility: hidden;
 }
 
-/* Wrapper
+/* WRAPPER
 Using a wrapper is optionnal, however it might be better to use it and
-overwrite its properties for custom (fix or fluid) width. */
+overwrite its properties for custom (fix or fluid) width.
+Use class="Wrapper fluid" and you're ready for fluid-layout pages. */
 .Wrapper {
 	margin: 1em auto 0;
 	padding: 0 5px;
 	_width: 950px;
 	max-width: 950px;
 }
-/* class="Wrapper fluid" and you're ready for fluid-layout pages. */
 .fluid { max-width: 96%; _width: 96%; }
 
-/* Chunk */
+/* CHUNK
+Chunks are displayed as blocks. They all have special margins that prevent
+them to be incorrectly spaced.
+You can user class="Chunk divide by3" to create a 1/3 width chunk. */
 .Chunk { display: block; margin: 0 auto 1em; }
 .Chunk>.Chunk { margin-bottom: 0; }
 .Chunk + .Chunk { margin-top: 1em; }
@@ -61,11 +64,12 @@ overwrite its properties for custom (fix or fluid) width. */
 .then_blow { float: right; }
 .then_center { float: none; margin-left: auto; margin-right: auto; }
 
-/* The following rules extend .Chunk */
+/* The following rules extend .Chunk, however the can be used to any other
+element. */
 .cramped { padding: 0 80px; }
 .narrowed { padding: 0 40px; }
 .nobottom { margin-bottom: 0; }
-.Chunk.nobottom + .Chunk { margin-top: 0em; }
+.Chunk.nobottom + .Chunk { margin-top: 0; }
 
 /* GENERIC RULES
 Yep, this one is still useful! */
